--- a/i3/config
+++ b/i3/config
@@ -6,7 +6,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco Display 13px
+font pango:System San Francisco Display 12px
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -23,13 +23,14 @@ font pango:System San Francisco Display 13px
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec tilix
+bindsym $mod+Return exec xfce4-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run -sb '#1D560B'
+# bindsym $mod+d exec --no-startup-id dmenu_run -sb '#1D560B'
+bindsym $mod+d exec --no-startup-id rofi -show drun
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -176,7 +177,8 @@ hide_edge_borders both
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	status_command i3status
+	# status_command $HOME/bin/conky-i3bar.sh
+	status_command i3blocks
 		colors {
 			background $bg-color
 				separator #757575
@@ -190,8 +192,8 @@ bar {
 
 # Extra Keys
 # Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -c 1 set Master 2%+ # increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer -c 1 set Master 2%- # decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Brightness controls
@@ -205,30 +207,32 @@ exec --no-startup-id synclient VertScrollDelta=-50 HorizTwoFingerScroll=1 HorizS
 
 # My Binds
 bindsym $mod+shift+x exec --no-startup-id i3lock --color "$bg-color" && sleep 1 && xset dpms force off
-bindsym $mod+shift+z exec --no-startup-id systemctl suspend
+bindsym $mod+shift+z exec --no-startup-id i3lock --color "$bg-color" && sleep 1 && systemctl suspend
 bindsym --release Print exec --no-startup-id flameshot gui
 
 # My Startup Exec
 # exec_always --no-startup-id feh --bg-scale /home/bma/Pictures/Arch1.jpg
-exec_always --no-startup-id xrandr --output VGA-1 --off --output HDMI-1 --off --output eDP-1 --primary --mode 1366x768 --pos 0x0 --rotate normal
+# exec_always --no-startup-id xrandr --output VGA-1 --off --output HDMI-1 --off --output eDP-1 --primary --mode 1366x768 --pos 0x0 --rotate normal
 exec_always --no-startup-id setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:alt_shift_toggle -option keypad:pointerkeys
-exec_always --no-startup-id xmodmap ~/.Xmodmap # custom keymap
 exec_always --no-startup-id xset dpms 0 0 180
-exec_always --no-startup-id xset -b
+# exec_always --no-startup-id xset -b
+exec_always --no-startup-id xinput --set-prop "ETPS/2 Elantech Touchpad" "libinput Natural Scrolling Enabled" 1
+exec_always --no-startup-id xinput --set-prop "ETPS/2 Elantech Touchpad" "libinput Disable While Typing Enabled" 0
 exec_always --no-startup-id numlockx on
+exec_always --no-startup-id compton --config "/home/bma/.config/compton/compton.conf"
+exec_always --no-startup-id nm-applet
 exec_always --no-startup-id xfce4-clipman
-exec_always --no-startup-id compton
-exec_always --no-startup-id tilix
-exec_always --no-startup-id firefox
+# exec_always --no-startup-id tilix
+# exec_always --no-startup-id firefox
 exec_always --no-startup-id xdg-settings set default-web-browser firefox.desktop
 # exec_always --no-startup-id google-chrome-stable
 
 # My Workspace Assignments
-assign [class="Google-chrome"] $ws2
-assign [class="firefox"] $ws2
-assign [class="firefoxdeveloperedition"] $ws2
-assign [class="Opera developer"] $ws2
-assign [class="Gnome-terminal"] $ws1
+# assign [class="Google-chrome"] $ws2
+assign [class="Firefox"] $ws2
+# assign [class="firefoxdeveloperedition"] $ws2
+# assign [class="Opera developer"] $ws2
+# assign [class="Gnome-terminal"] $ws1
 assign [class="Tilix"] $ws1
 assign [class="Thunderbird"] $ws9
 assign [class="Audacious"] $ws10
