--- a/i3/config
+++ b/i3/config
@@ -1,40 +1,76 @@
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
+# Variables
+# Mod key
 set $mod Mod4
+
+# Workspaces
+set $ws1 "1:Terminal"
+set $ws2 "2:Browser"
+set $ws3 "3:3"
+set $ws4 "4:4"
+set $ws5 "5:5"
+set $ws6 "6:6"
+set $ws7 "7:7"
+set $ws8 "8:8"
+set $ws9 "9:Mail"
+set $ws10 "10:Player"
+
+# Colors
+set $bg-color				#111111
+set $inactive-bg-color		#070707
+set $text-color				#f3f4f5
+set $inactive-text-color	#99A099
+set $urgent-bg-color		#8D0A01
+
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:System San Francisco Display 12px
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+
+# Resize mode
+# resize window (you can also use the mouse for that)
+mode "resize" {
+        # These bindings trigger as soon as you enter the resize mode
+
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym semicolon resize grow width 10 px or 10 ppt
+
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
+
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+r mode "default"
+}
+
+
+# Binds
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal
+bindsym --release $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
+# menu
 # bindsym $mod+d exec --no-startup-id dmenu_run -sb '#1D560B'
-bindsym $mod+d exec --no-startup-id rofi -show drun
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym --release $mod+d exec --no-startup-id rofi -show drun
+
+# resize window
+bindsym $mod+r mode "resize"
 
 # change focus
 bindsym $mod+j focus left
@@ -59,7 +95,6 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-
 
 # split in horizontal orientation
 bindsym $mod+h split h
@@ -87,19 +122,6 @@ bindsym $mod+p focus parent
 # focus the child container
 bindsym $mod+c focus child
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1:Terminal"
-set $ws2 "2:Browser"
-set $ws3 "3:3"
-set $ws4 "4:4"
-set $ws5 "5:5"
-set $ws6 "6:6"
-set $ws7 "7:7"
-set $ws8 "8:8"
-set $ws9 "9:Mail"
-set $ws10 "10:Player"
-
 # switch to workspace
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
@@ -126,46 +148,34 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+# Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+# Brightness controls
+bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10 # increase screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10 # decrease screen brightness
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+# i3lock
+bindsym $mod+shift+x exec --no-startup-id i3lock --color "$bg-color" && sleep 1 && xset dpms force off
+bindsym $mod+shift+z exec --no-startup-id i3lock --color "$bg-color" && sleep 1 && systemctl suspend
 
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
+# PrintScreen
+bindsym --release Print exec --no-startup-id flameshot gui
 
-bindsym $mod+r mode "resize"
+# Browser bind
+bindsym --release XF86HomePage exec --no-startup-id firefox
 
 
-# My Colors (Alex Booker)
-set $bg-color				#111111
-set $inactive-bg-color		#070707
-set $text-color				#f3f4f5
-set $inactive-text-color	#99A099
-set $urgent-bg-color		#8D0A01
-
+# Color Scheme
 #border					background			text				indicator
 client.focused 			$bg-color 			$bg-color 			$text-color 			#00ff00
 client.focused_inactive $inactive-bg-color	$inactive-bg-color 	$inactive-text-color 	#00ff00
@@ -174,8 +184,8 @@ client.urgent 			$urgent-bg-color 	$urgent-bg-color 	$text-color 			#00ff00
 
 hide_edge_borders both
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+
+# Bar setup
 bar {
 	# status_command $HOME/bin/conky-i3bar.sh
 	status_command i3blocks
@@ -190,34 +200,21 @@ bar {
 	strip_workspace_numbers yes
 }
 
-# Extra Keys
-# Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% # increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% # decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
-# Brightness controls
-bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10 # increase screen brightness
-bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10 # decrease screen brightness
+# Borders setup
+for_window [class="URxvt"] border pixel 1
+for_window [class="Mate-terminal"] border pixel 1
 
 
-# Reverse touchpad scrolling
-exec --no-startup-id synclient VertScrollDelta=-50 HorizTwoFingerScroll=1 HorizScrollDelta=-120
-
-
-# My Binds
-bindsym $mod+shift+x exec --no-startup-id i3lock --color "$bg-color" && sleep 1 && xset dpms force off
-bindsym $mod+shift+z exec --no-startup-id i3lock --color "$bg-color" && sleep 1 && systemctl suspend
-bindsym --release Print exec --no-startup-id flameshot gui
-
-# My Startup Exec
+# Startup Exec
 # exec_always --no-startup-id feh --bg-scale /home/bma/Pictures/Arch1.jpg
-# exec_always --no-startup-id xrandr --output VGA-1 --off --output HDMI-1 --off --output eDP-1 --primary --mode 1366x768 --pos 0x0 --rotate normal
+exec_always --no-startup-id xrandr --output VGA-1 --off --output HDMI-1 --off --output eDP-1 --primary --mode 1366x768 --pos 0x0 --rotate normal
 exec_always --no-startup-id setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:alt_shift_toggle -option keypad:pointerkeys
 exec_always --no-startup-id xset dpms 0 0 180
-# exec_always --no-startup-id xset -b
-exec_always --no-startup-id xinput --set-prop "ETPS/2 Elantech Touchpad" "libinput Natural Scrolling Enabled" 1
-exec_always --no-startup-id xinput --set-prop "ETPS/2 Elantech Touchpad" "libinput Disable While Typing Enabled" 0
+exec_always --no-startup-id xset -b
+exec --no-startup-id synclient VertScrollDelta=-50 HorizTwoFingerScroll=1 HorizScrollDelta=-80 FingerHigh=10 # FingerLow=10
+# exec_always --no-startup-id xinput --set-prop "ETPS/2 Elantech Touchpad" "libinput Natural Scrolling Enabled" 1
+# exec_always --no-startup-id xinput --set-prop "ETPS/2 Elantech Touchpad" "libinput Disable While Typing Enabled" 0
 exec_always --no-startup-id numlockx on
 exec_always --no-startup-id compton --config "/home/bma/.config/compton/compton.conf"
 exec_always --no-startup-id nm-applet
@@ -227,12 +224,15 @@ exec_always --no-startup-id xfce4-clipman
 exec_always --no-startup-id xdg-settings set default-web-browser firefox.desktop
 # exec_always --no-startup-id google-chrome-stable
 
-# My Workspace Assignments
+# Workspace Assignments
 # assign [class="Google-chrome"] $ws2
-assign [class="Firefox"] $ws2
+assign [class="firefox"] $ws2
 # assign [class="firefoxdeveloperedition"] $ws2
 # assign [class="Opera developer"] $ws2
 # assign [class="Gnome-terminal"] $ws1
-assign [class="Tilix"] $ws1
+assign [class="Xfce4-terminal"] $ws1
+assign [class="Gnome-terminal"] $ws1
+assign [class="Mate-terminal"] $ws1
+assign [class="URxvt"] $ws1
 assign [class="Thunderbird"] $ws9
 assign [class="Audacious"] $ws10
