--- a/i3/config
+++ b/i3/config
@@ -151,6 +151,9 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+# move workspace to another screen
+bindsym $mod+shift+w move workspace to output right
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 
@@ -213,7 +216,7 @@ for_window [class="Termite"] border pixel 1
 
 
 # Startup Exec
-exec_always --no-startup-id feh --bg-scale /home/bma/Pictures/6.jpg
+exec_always --no-startup-id feh --bg-scale /home/bma/Pictures/09.jpg
 exec_always --no-startup-id xrandr --output VGA-1 --off --output HDMI-1 --off --output eDP-1 --primary --mode 1366x768 --pos 0x0 --rotate normal
 exec_always --no-startup-id setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:alt_shift_toggle -option keypad:pointerkeys
 exec_always --no-startup-id xset -b
@@ -236,6 +239,7 @@ exec_always --no-startup-id xfce4-power-manager
 # Workspace Assignments
 # assign [class="Google-chrome"] $ws2
 assign [class="firefox"] $ws2
+assign [class="Google-chrome-unstable"] $ws2
 # assign [class="firefoxdeveloperedition"] $ws2
 # assign [class="Opera developer"] $ws2
 # assign [class="Gnome-terminal"] $ws1
